[package]
name = "ebenezer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
config = { version = "0.14.0" }
lazy_static = "1.4.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
homedir = "0.2.1"
